--- a/index.html
+++ b/index.html
@@ -8,5 +8,27 @@
 </head>
 <body>
   hello
+
+  <h1>Sample Form</h1>
+  <form id="form" action="http://guestbook.example.com/register" method="POST">
+    <label> First Name: <input type="text" name="firstName" id="firstName" /></label><br/>
+    <label> Message: <input type="text" name="message" id="message" /></label><br/>
+    <input type="submit" name="submit" id="submit" value="Submit" />
+  </form>
+  <!-- <script charset="utf-8" type="application/javascript">
+    document.querySelector("form").addEventListener('submit', function(e) {
+      e.preventDefault();
+
+      let formValues = new FormData(e.target);
+
+      fetch("http://example.com/dog_counter", {
+        method: 'POST',
+        body: formValues
+      }).then( e => console.log(e) );
+    });
+  </script> -->
+
+
+  <script src ="index.js"></script>
 </body>
 </html>
