--- a/sample_form.html
+++ b/sample_form.html
@@ -10,8 +10,8 @@
   <body>
     <h1>Sample Form</h1>
     <form action="http://example.com/dog_logger" method="POST">
-      <label> Dog Name: <input type="text" name="dogName" id="dogName" /></label><br/>
-      <label> Dog Breed: <input type="text" name="dogBreed" id="dogBreed" /></label><br/>
+      <label> Dog Name: <input type="text" name="dogName" id="dogName" value="" /></label><br/>
+      <label> Dog Breed: <input type="text" name="dogBreed" id="dogBreed" value="" /></label><br/>
       <input type="submit" name="submit" id="submit" value="Submit" />
     </form>
     <script charset="utf-8" type="application/javascript">
